[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dorable_3dprinter_api"
version = "0.1.0"
authors = [
  { name="Chris Tomorrow", email="sample@email.com" },
]
description = "Python API interface for 3D Printers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "paho-mqtt>=2.0.0",
  "pillow>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/christomorrow/dorable-3dprinter-api"
Docs = "https://github.com/christomorrow/dorable-3dprinter-api/"
Issues = "https://github.com/christomorrow/dorable-3dprinter-api/issues"

[tool.poetry.dependencies]
python = "^3.10"
